--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <img id="player" src="https://media.tenor.com/images/0791eb3858075aca85eed5ecfe08c778/tenor.gif" alt="">
-  <img id="coin" src="https://myrealdomain.com/images/gold-coin-gif-1.gif" alt="">
+  <img id="coin" src="https://orig00.deviantart.net/c8ea/f/2018/030/f/c/gold_coin_anim_by_khajiitsawyer-dc1mf43.gif" alt="">
   <script src="app.js"></script>
 </body>
 
